# RL_26_balance_vehicle

./: .gitignore  README.md  WORKSPACE_QUICKSTART.md  pyproject.toml  start_rl_env.sh
matlab_reference/: README.md
tools/: README_rl_pipeline.md  REPO_OVERVIEW.md  evaluate.py  fit_real_log_model.py  live_control.py  lqr_from_matlab.py  plot_results.py  render_mujoco_rollout.py  render_rollout_video.py  requirements-wsl.txt  run_full_experiment.py  run_team_pipeline_comparison.py  train.py  train_dqn.py  train_ppo.py  train_sac.py  train_td3.py
tools/models/: wheeltec_balance_vehicle.xml
tools/rl_balance/: __init__.py  config.py  env.py  experiments.py  live_control.py  policies.py
tools/tests/: test_balance_env.py  test_experiment_cli.py  test_experiments.py  test_live_protocol.py  test_lqr_from_matlab.py
项目梳理/: Agent优化Pipeline.md  Codex持续优化Prompt.md  实车日志拟合结果.md  小组Pipeline对接说明.md  当前实验交接.md  控制链路说明.md  自动优化研究日志.md  自动优化研究日志模板.md
